Fix color picker order and always-visible dropdown
- Move color picker before bold/italic/underline in toolbar config
- Target only .ql-expanded state for flex layout so dropdown is
  hidden by default and only shows on click

--- a/frontend/src/app/modal/appreciation-editor-modal.component.css
+++ b/frontend/src/app/modal/appreciation-editor-modal.component.css
@@ -93,7 +93,7 @@
   margin-right: 0;
 }
 
-:host ::ng-deep .ql-toolbar .ql-color-picker .ql-picker-options {
+:host ::ng-deep .ql-toolbar .ql-color-picker.ql-expanded .ql-picker-options {
   width: 112px;
   display: flex;
   flex-wrap: wrap;
